<resources>
    <string name="app_name">REducation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultUsername">Матвеев Николай Валерьевич</string>
    <string name="defaultFac">Факультет: КСИТ</string>
    <string name="defaultCourse">Курс: 2</string>
    <string name="defaultEventItemText">Информатика и вычислительная техника</string>
    <string name="settings_menu_changeName">Изменить имя</string>
    <string name="settings_menu_changePhoto">Сменить фото профиля</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_enterPhone">Введите номер телефона</string>
    <string name="register_phoneHint">+38 ( _ _ _ ) _ _ _ _ _ _ _</string>
    <string name="register_text">Регистрация  Авторизация</string>
    <string name="register_instruction">На указанный вами номер будет отправлено SMS сообщение с кодом подтверждения.</string>
    <string name="register_nextButton">Продолжить</string>
    <string name="register_enterCodeHint">__ __ __ __ __ __</string>
    <string name="register_EnterCode">Введите код</string>
    <string name="register_enterCodeDescription">Мы отправили SMS с кодом подтверждения на Ваш телефон</string>
</resources>