<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterPhoneFragment">

    <ImageView
        android:id="@+id/app_logo"
        style="@style/logo"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/register_text"
        style="@style/textH1"
        android:text="@string/register_text"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/divider"
        app:layout_constraintBottom_toBottomOf="@+id/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_text"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/register_phoneNumberText"
        style="@style/textH1"
        android:layout_marginTop="24dp"
        android:text="@string/register_enterPhone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/register_phoneNumber"
        style="@style/EditText"
        android:layout_marginTop="4dp"
        android:hint="@string/register_phoneHint"
        android:importantForAutofill="no"
        android:textStyle="bold"
        android:background="@color/white"
        android:inputType="number"
        android:maxLength="12"
        android:textColorHint="@color/colorAccentLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phoneNumberText"
        tools:ignore="MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/register_description"
        style="@style/textH1"
        android:layout_margin="32dp"
        android:text="@string/register_instruction"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phoneNumber"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginVertical"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderWidth="0dp"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>